--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
         </div>
     </div>
     <!-- Script -->
-    <script src="script/main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
