--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
     </div>
     <!-- Script -->
     <script src="./main.js"></script>
+    <script src="./jquery-3.5.1.min.js"></script>
+    
 </body>
 </html>
