--- a/index.html
+++ b/index.html
@@ -25,8 +25,50 @@
         </div>
     </div>
     <!-- Script -->
-    <script src="./main.js"></script>
     <script src="./jquery-3.5.1.min.js"></script>
+    <script>
+        
+function LogIn(){
+    var email = document.getElementById('email').value;
+    var password = document.getElementById('password').value;
+
+    var container = document.querySelector('.container');
+    var pass = "023156489";
+    var mail = "username";
+
+    if(email === "" || password === "" || email != mail || password != pass){
+        container.style.display = "block";
+    }else{
+        setCookie('Email' , email );
+        setCookie("Password" , password);
+        window.open('home.html ', '_self')
+    }
     
+    window.onclick = function(event) {
+        if (event.target == container) {
+            container.style.display = "none";
+        }
+      }
+
+}
+
+    function setCookie(c_name, value, exdays) {
+        var exdate = new Date();
+        exdate.setDate(exdate.getDate() + exdays);
+        var c_value = escape(value) + ((exdays == null) ? "" : "; expires=" + exdate.toUTCString());
+        document.cookie = c_name + "=" + c_value;
+}
+function getCookie(c_name) {
+    var i, x, y, ARRcookies = document.cookie.split(";");
+    for (i = 0; i < ARRcookies.length; i++) {
+        x = ARRcookies[i].substr(0, ARRcookies[i].indexOf("="));
+        y = ARRcookies[i].substr(ARRcookies[i].indexOf("=") + 1);
+        x = x.replace(/^\s+|\s+$/g, "");
+        if (x == c_name) {
+            return unescape(y);
+        }
+    }
+    }
+    </script>
 </body>
 </html>
