--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
     </header>
     <div id="MyClockDisplay" class="clock" ></div>
     <h1 class="type">
-            <a href="" class="typewrite" data-period="2000" data-type='["قم بالضغط علي الزر في الاسفل  لتقوم بالتسبيح والاستغفار" , ".بعد الانتهاء واذا قمت بتحميل الصفحة مرة اخرى قم بالضغط علي الزر في بداية الصفحة علي الجانب اليسار لمعرفة عدد التسبيح في المرة السابقة."]'>
+            <a href="" class="typewrite" data-period="2000" data-type='["قم بالضغط علي الزر في الاسفل  لتقوم بالتسبيح والاستغفار" , ".بعد الانتهاء واذا قمت بتحميل الصفحة مرة اخرى قم بالضغط علي الزر في بداية الصفحة علي الجانب اليسار لمعرفة عدد التسبيح في المرة السابقة"]'>
               </a>
     </h1>
     <div class="box">
