--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button class="btn-log" onclick="LogIn()">تسجيل الدخول </button>
     </div>
     <h1 class="type">
-        <a href="" class="typewrite" data-period="2000" data-type='[" .قم بالضغط علي زر تسجيل الدخول وستظهر لك رسالة منبثقة تحتوى علي اسم المستخدم وكلمة السر "]'>
+        <a href="" class="typewrite" data-period="2000" data-type='["قم بالضغط علي زر تسجيل الدخول وستظهر لك رسالة منبثقة تحتوى علي اسم المستخدم وكلمة السر "]'>
           </a>
       </h1>
     <div class="container">
