--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
 
 
     <div class="ContainerBox">
-        <ul class="header">
+   <ul class="header">
             <li id="close-bar">
                 <button class="btn-close">&times;</button>
             </li>
@@ -35,6 +35,9 @@
                     username  : اسم المستخدم  <br>
                       كلمة السر : 023156489 
                 </p>
+            </li> 
+            <li>
+                <p><a href="./main.html" style="text-decoration: none; color: white;">القرأن الكريم</a></p>
             </li>
         </ul>
         <div class="footer">
