--- a/main.html
+++ b/main.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image/png/gif" href="./OS5H440.jpg">
     <link rel="icon" type="image/png/gif" href="./OS5H440.jpg">
 
     <title>القرأن الكريم </title>
@@ -229,7 +230,6 @@ function getCookie(c_name) {
         }
         setCookie('NumberPages' , element.innerHTML);
 
-
     });  
           window.addEventListener('load' ,  function(){
               var paragraph = document.createElement('P');
@@ -237,11 +237,14 @@ function getCookie(c_name) {
 
         paragraph.innerHTML = getCookie('NumberPages');
         paragraph.addEventListener('click' , function(n){
+          
+            if(getCookie('NumberPages') === undefined){
+                element.style.display = "none";
+            }else{
                         showSlides(slideIndex = getCookie('NumberPages'));
-            });
 
         });
-
+  });
     </script>
 </body>
 </html>
