--- a/home.html
+++ b/home.html
@@ -40,14 +40,14 @@
                 <p><a href="./main.html" style="text-decoration: none; color: white;">القرأن الكريم</a></p>
             </li>
         </ul>
-        <div class="footer">
+        <footer>
             <ul>
                 <p>تابعني </p>
                 <li><a href="https://www.facebook.com/profile.php?id=100045058275632"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="https://api.whatsapp.com/send?phone=+201145099681"><i class="fa fa-whatsapp"></i></a></li>
                 <li><a href="https://twitter.com/AhmedRe91693107"><i class="fa fa-twitter"></i></a></li>
             </ul>
-        </div>
+        </footer>
     </div>
     <script src="./main.js"></script>
     <script src="./jquery-3.5.1.min.js"></script>
