--- a/main.html
+++ b/main.html
@@ -35,14 +35,14 @@
         </li>
     </ul>
 
-    <div class="footer">
+    <footer>
         <ul>
             <p>تابعني </p>
             <li><a href="https://www.facebook.com/profile.php?id=100045058275632"><i class="fa fa-facebook"></i></a></li>
             <li><a href="https://api.whatsapp.com/send?phone=+201145099681"><i class="fa fa-whatsapp"></i></a></li>
             <li><a href="https://twitter.com/AhmedRe91693107"><i class="fa fa-twitter"></i></a></li>
         </ul>
-    </div>
+    </footer>
 </div>
 <div class="QuranContainer">
 
