--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
         </li>
     </ul>
 
-    <footer>
+    <footer stye="margin-top:20%;>
         <ul>
             <p>تابعني </p>
             <li><a href="https://www.facebook.com/profile.php?id=100045058275632"><i class="fa fa-facebook"></i></a></li>
