--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
             <input type="button" value="اضف رقم الصفحة" id="submit" name="button">
         </li>
         <li class="list">
-            <p>: الصفحات السابقة </p>
+            <p>: الصفحات المراد الرجوع اليها  </p>
         </li>
     </ul>
 
