--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/png/gif" href="./OS5H440.jpg">
     <title>Sabiha</title>
@@ -11,7 +11,6 @@
 
     <header>
 <button class="btn-bars" onclick="OpenBar()"><i class="fa fa-bars"></i></button>
-
     </header>
     <div id="MyClockDisplay" class="clock" ></div>
 
@@ -26,7 +25,7 @@
 
 
     <div class="ContainerBox">
-   <ul class="header">
+        <ul class="header">
             <li id="close-bar">
                 <button class="btn-close">&times;</button>
             </li>
@@ -36,10 +35,9 @@
                       كلمة السر : 023156489 
                 </p>
             </li> 
-            <li>
-                <p><a href="./main.html" style="text-decoration: none; color: white;">القرأن الكريم</a></p>
-            </li>
+   
         </ul>
+
         <footer>
             <ul>
                 <p>تابعني </p>
@@ -49,8 +47,8 @@
             </ul>
         </footer>
     </div>
-    <script src="./main.js"></script>
-    <script src="./jquery-3.5.1.min.js"></script>
+    <script src="script/main.js"></script>
+    <script src="script/jquery-3.5.1.min.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script>
