--- a/home.html
+++ b/home.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/png/gif" href="./OS5H440.jpg">
     <title>Sabiha</title>
 </head>
-
+<body>
+    <div class="loadingContainer">
+        <div class="loader"></div>
+    
+    </div>
     <header>
 <button class="btn-bars" onclick="OpenBar()"><i class="fa fa-bars"></i></button>
     </header>
@@ -47,7 +51,7 @@
             </ul>
         </footer>
     </div>
-    <script src="./main.js"></script>
+    <script src="script/main.js"></script>
     <script src="script/jquery-3.5.1.min.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
