--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/png/gif" href="./OS5H440.jpg">
     <title>Sabiha</title>
@@ -14,7 +14,9 @@
     
     </div>
     <header>
-<button class="btn-bars" onclick="OpenBar()"><i class="fa fa-bars"></i></button>
+<button class="btn-bars" onclick="OpenBar()"><i class="fa fa-bars"></i>
+<span id="number"></span>
+</button>
     </header>
     <div id="MyClockDisplay" class="clock" ></div>
 
@@ -25,6 +27,7 @@
         </div>
 
         <button class="btn-add" onclick="myFunction()" >اضغط</button>
+
     </div>
 
 
@@ -51,8 +54,14 @@
             </ul>
         </footer>
     </div>
-    <script src="./main.js"></script>
-    <script src="./jquery-3.5.1.min.js"></script>
+
+    <div class="containerZkr">
+        <div class="popupZkr">
+            <h1 id="zkrpop"></h1>
+        </div>
+    </div>
+    <script src="script/main.js"></script>
+    <script src="script/jquery-3.5.1.min.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script>
