--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/png/gif" href="./OS5H440.jpg">
     <title>Sabiha</title>
@@ -15,7 +15,7 @@
     </div>
     <header>
 <button class="btn-bars" onclick="OpenBar()"><i class="fa fa-bars"></i>
-<span id="number"></span>
+<div id="number"></div>
 </button>
     </header>
     <div id="MyClockDisplay" class="clock" ></div>
@@ -27,6 +27,16 @@
         </div>
 
         <button class="btn-add" onclick="myFunction()" >اضغط</button>
+        <button class="btn-restart">
+            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 14.155 14.155" style="enable-background:new 0 0 14.155 14.155;" xml:space="preserve">
+<g>
+	<path id="fill" d="M12.083,1.887c-0.795-0.794-1.73-1.359-2.727-1.697v2.135c0.48,0.239,0.935,0.55,1.334,0.95
+		c1.993,1.994,1.993,5.236,0,7.229c-1.993,1.99-5.233,1.99-7.229,0c-1.991-1.995-1.991-5.235,0-7.229
+		C3.466,3.269,3.482,3.259,3.489,3.25h0.002l1.181,1.179L4.665,0.685L0.923,0.68l1.176,1.176C2.092,1.868,2.081,1.88,2.072,1.887
+		c-2.763,2.762-2.763,7.243,0,10.005c2.767,2.765,7.245,2.765,10.011,0C14.844,9.13,14.847,4.649,12.083,1.887z"/>
+</g></svg> 
+        </button>
 
     </div>
 
@@ -42,9 +52,10 @@
                       كلمة السر : 023156489 
                 </p>
             </li> 
-   
         </ul>
-
+<li class="note">
+    <p> ملحوظة : في كل مرة تقوم بالتسبيح سيظهر عدد التسبيح في المرة السابقة  واذا قمت بالوصول الي العدد رقم 100 ستظهر ايقونة إعادة تحميل الصفحة وتقوم بالتسبيح مرة اخرى  واذا لا تريد ذلك قم باستكمال التسبيح بدون اعادة تحميل الصفحة </p>
+</li>
         <footer>
             <ul>
                 <p>تابعني </p>
@@ -60,8 +71,8 @@
             <h1 id="zkrpop"></h1>
         </div>
     </div>
-    <script src="./main.js"></script>
-    <script src="./jquery-3.5.1.min.js"></script>
+    <script src="script/main.js"></script>
+    <script src="script/jquery-3.5.1.min.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script>
